# esp32-cam

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  camera_driver.c  camera_driver.h  color_detect.c  color_detect.h  config_store.c  config_store.h  http_server.c  http_server.h  idf_component.yml  pin_config.h  web_ui.h  ws2812_led.c  ws2812_led.h
